--- a/content/index.html
+++ b/content/index.html
@@ -1,8 +1,10 @@
 --- 
-title: Home
+title: Zdravo Art Deco
 ---
 
 <h1>A Brand New nanoc Site</h1>
+
+<p>This is a brand new paragraph which I've just inserted into this file! Gosh, I can barely control my excitement!</p>
 
 <p>You’ve just created a new nanoc site. The page you are looking at right now is the home page for your site. To get started, consider replacing this default homepage with your own customized homepage. Some pointers on how to do so:</p>
 
